# BGN

./: .gitignore  BGN.slnx  Bgn.props  CHANGELOG.md  CMakeLists.txt  README-Windows.md  README.md
data/: bee_fairy.mass  bee_rigged.mass
editor/: Arena.vcxproj  CMakeLists.txt
editor/src/: App.cpp  App.h  Bootstrap.cpp  Bootstrap.h  Camera.h  Dialog.h  MassModel.cpp  MassModel.h  Math.h  Panels.cpp  Renderer.cpp  Renderer.h  RiggedMesh.cpp  RiggedMesh.h  SimBridge.cpp  SimBridge.h  SkinGen.cpp  SkinGen.h  TrainBridge.cpp  TrainBridge.h  main.cpp
fgn/: fgn_narrow_model_entire_01.safetensors
libs/: CMakeLists.txt
mcp/: BindSkin.cpp  BindSkin.h  CMakeLists.txt  MassModel.cpp  MassModel.h  Mcp.cpp  README.md
python/: CMakeLists.txt  advanced_vae.py  augument_raw_data.py  checkpoint_converter.py  converter_to_gvae_set.py  forward_gaitnet.py  ray_model.py  ray_train.py  train_backward_gaitnet.py  train_forward_gaitnet.py
scripts/: build.ps1  editor.ps1  mcp.ps1  view.ps1
sim/: CMakeLists.txt  Character.cpp  Character.h  DARTHelper.cpp  DARTHelper.h  Environment.cpp  Environment.h  Muscle.cpp  NN.cpp  NN.h  Sim.vcxproj
tools/: export_weights.py
viewer/: C3D_Reader.cpp  CMakeLists.txt  GLFWApp.cpp  GLFWApp.h  GLfunctions.cpp  main.cpp
